group 'interview_course'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

configurations {
    testCompile.extendsFrom compileOnly
    annotationProcessor.extendsFrom compileOnly
}

dependencies {
    testCompile 'org.junit.jupiter:junit-jupiter-params:+',
            'org.hamcrest:java-hamcrest:+'

    testRuntime 'org.junit.jupiter:junit-jupiter-engine:+'

}